# so101_vr_teleop

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: cameras.example.json  record.example.env  robot.example.env
scripts/: bootstrap.sh  env.sh  run_record.sh  run_teleop.sh
src/so101_vr_teleop/: __init__.py  check_env.py  common.py  dataset_naming.py  find_cameras.py  override_reset_pose.py  record.py  scripts_entry.py  teleoperate.py
src/so101_vr_teleop/isaac_teleop/: __init__.py  base.py  config_isaac_teleop.py  teleop_bi_xr_controller.py
