[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "so101-vr-teleop"
version = "0.1.0"
description = "Bimanual SO-101 real-robot teleoperation and dataset recording via Meta Quest + NVIDIA Isaac Teleop (LeRobot)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "kouya0205" }]
keywords = ["lerobot", "so101", "isaac-teleop", "quest", "teleoperation", "bimanual"]
dependencies = [
  "lerobot[feetech,kinematics,dataset]>=0.6.0",
  "huggingface_hub>=1.5",
  "isaacteleop[cloudxr,retargeters-lite]~=1.3.131",
  "scipy>=1.14",
  "numpy>=1.24",
  "psutil>=5.9",
]

[project.optional-dependencies]
teleop = []
dev = ["ruff>=0.6"]

[project.scripts]
so101-vr-teleop = "so101_vr_teleop.teleoperate:main"
so101-vr-record = "so101_vr_teleop.record:main"
so101-vr-override-reset = "so101_vr_teleop.override_reset_pose:main"
so101-vr-find-cameras = "so101_vr_teleop.scripts_entry:find_cameras_main"
so101-vr-check-env = "so101_vr_teleop.scripts_entry:check_env_main"

[tool.hatch.build.targets.wheel]
packages = ["src/so101_vr_teleop"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

